--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ."
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint:fix": "eslint --fix",
+    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "prettier-fix": "prettier --write .",
+    "lint-prettier": "yarn lint:check &&yarn prettier:check"
   },
   "author": "Arko Roy Badhon",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
@@ -26,6 +32,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.1"
   }
 }
