--- a/.env
+++ b/.env
@@ -2,4 +2,11 @@ NODE_ENV=development
 PORT=5000
 
 
-DATABASE_URL=
+DATABASE_URL="mongodb+srv://e-commerce:DUTmIfycQU5iMA7z@cluster0.et115mk.mongodb.net/e-commerce?retryWrites=true&w=majority"
+
+
+BCRYPT_SALT_ROUNDS=12
+JWT_SECRET= 'very-secret'
+JWT_EXPIRES_IN=1d
+JWT_REFRESH_SECRET='very-refresh-secret'
+JWT_REFRESH_EXPIRES_IN=365d
