--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "author": "Arko Roy Badhon",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "yarn lint-prettier"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -23,6 +26,8 @@
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
